--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,16 @@
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@hookform/resolvers": "^3.9.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
