--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "firebase": "^11.0.2",
+    "node-stdlib-browser": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
