--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.5",
     "axios": "^1.7.9",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
     "firebase": "^11.0.2",
+    "jspdf": "^2.5.2",
     "node-stdlib-browser": "^1.3.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
