--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "node-stdlib-browser": "^1.3.0",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
